terraform_static/application/listener_rules/employee_listener/main.tf
resource "aws_lb_listener_rule" "employee_path_rule" {
  listener_arn = data.terraform_remote_state.listener.outputs.https_listener_arn
  priority     = var.priority

  action {
    type             = "forward"
    target_group_arn = data.terraform_remote_state.employee.outputs.target_group_arn
  }

  condition {
    path_pattern {
      values = [var.path_pattern]
    }
  }

  tags = var.standard_tags
}
